--- a/az204-auth.csproj
+++ b/az204-auth.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.70.1" />
+  </ItemGroup>
+
 </Project>
